--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,30 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# eclipse specific git ignore
+#############################
+.project
+.metadata
+.classpath
+.settings/
+
+# idea specific git ignore
+#############################
+.idea
+*.iml
+
+# maven specific git ignore
+############################
+target/
+log/
+
+# ignore directories
+#####################
+tmp/
+
+# ignore all files ending with ~
+################################
+*~
+~*
+*BAK
